2018-10-04: Version 0.1.54 released

    The compiler now tolerates the use of NULL (e.g., (void *) 0) in
    contexts that expect a non-void pointer, e.g., int *p = NULL;

    Additional optimizations of unsigned byte multiplications.

    Added new function setPmodeGraphicsAddressEx(), which allows
    the caller to change the screen buffer address for pcls() without
    changing the currently displayed screen.

2018-09-20: Version 0.1.53 released

    Fixed an OS-9 extern array problem by fixing the way the compiler
    determines if a variable can go to the read-only section or not.
    This determination does not depend on an array's initializer anymore. 

    Fixed a bug where an external variable declaration and a variable
    definition of the same name were accepted even when they were not
    of the same type. 

    Fixed a bug with the generation of some assignments involving an array
    variable on the right side.

    Added functions pmode(), screen(), rgb() and cmp() to the library that
    ships with CMOC. These functions, which are close to their Color Basic
    equivalents, are declared and documented in <coco.h>.

    Function pcls() now takes only one argument. It used to take the screen
    address, but does not anymore because it now uses the address passed to
    pmode(). The latter must be called before calling pcls().

    Removed misnamed function showPmode0() from <coco.h>: pmode() and
    screen() should be used instead. 

    Fixed showGraphicsAddress() so that it supports PMODEs other than
    PMODE 4. This requires passing a second argument, i.e., the new value
    to assign to the SAM chip's V register. Using the pmode() and screen()
    functions is easier however.

    Added function setPmodeGraphicsAddress() that only changes the PMODE
    graphics screen address without changing the graphics mode.

    Fixed a crash that happened when the user program tried to typedef