@@ -2,7 +2,7 @@
 
 AC_PREREQ(2.54)
 
-AC_INIT(cmoc, 0.1.54)
+AC_INIT(cmoc, 0.1.55)
 AC_CONFIG_SRCDIR(src/lexer.ll)
 AM_INIT_AUTOMAKE
 
@@ -13,7 +13,7 @@ AC_SUBST(PACKAGE_FULL_NAME)
 AC_SUBST(PACKAGE_SUMMARY_EN)
 AC_SUBST(PACKAGE_SUMMARY_FR)
 
-MANUAL_DATE_EN="October 4th, 2018"; AC_SUBST(MANUAL_DATE_EN)
+MANUAL_DATE_EN="October 14th, 2018"; AC_SUBST(MANUAL_DATE_EN)
 
 AC_PROG_CXX
 AC_LANG_CPLUSPLUS
