@@ -1,4 +1,4 @@
-/*  $Id: main.cpp,v 1.113 2018/09/08 20:37:31 sarrazip Exp $
+/*  $Id: main.cpp,v 1.114 2018/10/14 03:25:03 sarrazip Exp $
 
     CMOC - A C-like cross-compiler
     Copyright (C) 2003-2018 Pierre Sarrazin <http://sarrazip.com/>
@@ -783,6 +783,42 @@ Parameters::getVersionInteger()
 }
 
 
+// Checks if the line matches the pattern of an include marker as
+// generated by the C preprocessor: ^\#\ [0-9]+\ \".*\"[ 0-9]*$
+// i.e., a pound sign followed by a line number, followed by a
+// double-quoted file path.
+// If 'line' matches, this file path is stored in 'filename' and
+// true is returned.
+// Otherwise, false is returned.
+//
+static bool
+parseIncludeMarker(const char *line, string &filename)
+{
+    if (!line)
+        return false;
+    if (*line++ != '#')
+        return false;
+    if (*line++ != ' ')
+        return false;
+    const char *p = line;
+    while (isdigit(*p))  // pass line number
+        ++p;
+    if (p == line)
+        return false;  // no line number
+    if (*p++ != ' ')
+        return false;
+    if (*p++ != '\"')
+        return false;
+    const char *f = p;
+    while (*p != '\"' && *p != '\0')  // reach end of quoted string
+        ++p;
+    if (*p != '\"')
+        return false;
+    filename.assign(f, size_t(p - f));
+    return true;
+}
+
+
 // In monolith mode, finishes with generation of the assembly file.
 // In linker mode, also invokes the assembler on that file.
 //
@@ -838,178 +874,201 @@ Parameters::compileCFile(const string &inputFilename,
     PipeCloser preprocFileCloser(yyin);
 
 
-    if (preprocOnly)
+    if (preprocOnly || params.generatePrerequisitesFileOnly)
     {
-        enum { bufferSize = 8192 };
-        string buffer(bufferSize, ' ');  // allocate buffer
-        size_t numRead;
-        while ((numRead = fread((void *) buffer.data(), 1, buffer.length(), yyin)) > 0)
-        {
-            if (fwrite(buffer.data(), 1, numRead, stdout) != numRead)
-            {
-                int e = errno;
-                cout << PACKAGE << fatalErrorPrefix
-                     << "failed to copy C preprocessor output to standard output:"
-                     << " " << strerror(e) << endl;
-                return EXIT_FAILURE;
-            }
-        }
-        return EXIT_SUCCESS;
-    }
-
-
-    // Create the translation unit object, if in linker mode.
-    // In that mode, each .c file must be compiled as a separate unit.
-    // In monolith mode, we use a single unit, which must have been created by the caller.
-    //
-    if (!monolithMode)
         TranslationUnit::createInstance(targetPlatform,
                                         callToUndefinedFunctionAllowed,
                                         warnSignCompare,
                                         warnPassingConstForFuncPtr,
                                         isConstIncorrectWarningEnabled,
                                         relocatabilitySupported);
+        char buffer[8192];
+        while (fgets(buffer, sizeof(buffer), yyin) != NULL)  // while a line can be read
+        {
+            if (preprocOnly)
+            {
+                cout << buffer;
+                if (!cout)
+                {
+                    int e = errno;
+                    cout << PACKAGE << fatalErrorPrefix
+                         << "failed to copy C preprocessor output to standard output:"
+                         << " " << strerror(e) << endl;
+                    TranslationUnit::destroyInstance();
+                    return EXIT_FAILURE;
+                }
+            }
+            else  // extract an #included file path, if applicable:
+            {
+                string filename;
+                if (parseIncludeMarker(buffer, filename))
+                    TranslationUnit::instance().addPrerequisiteFilename(filename.c_str());
+            }
+        }
+        if (preprocOnly)
+        {
+            TranslationUnit::destroyInstance();
+            return EXIT_SUCCESS;
+        }
+    }
+
+
     TranslationUnitDestroyer tud(!monolithMode);  // destroy TU at end of this function, when in linker mode
-    TranslationUnit &tu = TranslationUnit::instance();
 
-    if (verbose)
-        cout << "Compiling..." << endl;
-    assert(yyin != NULL);
-    yyparse();  // invoke parser.yy
-
-
-    uint16_t pragmaStackSpace = 0;
-
-    tu.processPragmas(params.codeAddress, params.codeAddressSetBySwitch,
-                      limitAddress, limitAddressSetBySwitch,
-                      params.dataAddress, params.dataAddressSetBySwitch,
-                      pragmaStackSpace, monolithMode, compileOnly);
-
-    /*  Apply #pragma stack_space only if --stack-space not used.
-    */
-    if (pragmaStackSpace != 0 && !stackSpaceSpecifiedByCommandLine)
-        params.stackSpace = pragmaStackSpace;
-
-    /*  On the Vectrex, the writable globals must be mapped at $C880
-        while the code and read-only globals are mapped at the start of memory.
-    */
-    if (targetPlatform == VECTREX)
-        params.dataAddress = 0xC880;  // equivalent to --data=0xC880
-
-
-    tu.enableNullPointerChecking(nullPointerCheckingEnabled);
-
-    tu.enableStackOverflowChecking(stackOverflowCheckingEnabled);
-
-    if (verbose && targetPlatform != OS9)
-    {
-        cout << "Code address: $" << hex << params.codeAddress << dec << " (" << params.codeAddress << ")\n";
-        cout << "Data address: ";
-        if (params.dataAddress == 0xFFFF)
-            cout << "after the code";
-        else
-            cout << "$" << hex << params.dataAddress << dec << " (" << params.dataAddress << ")";
-        cout << "\n";
-    }
-
-    int pipeCmdStatus = preprocFileCloser.close();
-    //cout << "pipeCmdStatus=" << pipeCmdStatus << endl;
-    if (!WIFEXITED(pipeCmdStatus))
-    {
-        cout << PACKAGE << fatalErrorPrefix << "preprocessor terminated abnormally." << endl;
-        return EXIT_FAILURE;
-    }
-    if (WEXITSTATUS(pipeCmdStatus) != 0)
-    {
-        cout << PACKAGE << fatalErrorPrefix << "preprocessor failed." << endl;
-        return EXIT_FAILURE;
-    }
 
     if (numErrors == 0 && !params.generatePrerequisitesFileOnly)
     {
-        tu.checkSemantics(params.monolithMode);  // this is when Scope objects get created in FunctionDefs
-
-        tu.allocateLocalVariables();  // in all FunctionDef objects
-    }
-
-    if (targetPlatform == VECTREX)
-    {
-        // The Vectrex is limited in RAM space and shares the stack with freely available memory.
-        // $C880 - $CBEA is user RAM (874 bytes)
-        // $CBEA is Vec_Default_Stk Default top-of-stack
+        // Create the translation unit object, if in linker mode.
+        // In that mode, each .c file must be compiled as a separate unit.
+        // In monolith mode, we use a single unit, which must have been created by the caller.
         //
-        params.stackSpace = 256;
-    }
+        if (!monolithMode)
+            TranslationUnit::createInstance(targetPlatform,
+                                            callToUndefinedFunctionAllowed,
+                                            warnSignCompare,
+                                            warnPassingConstForFuncPtr,
+                                            isConstIncorrectWarningEnabled,
+                                            relocatabilitySupported);
+        TranslationUnit &tu = TranslationUnit::instance();
 
-    ASMText asmText;
-
-    if (numErrors == 0 && !params.generatePrerequisitesFileOnly)
-    {
-        tu.emitAssembler(asmText, moduleName, compileOnly, params.codeAddress, params.dataAddress,
-                         params.stackSpace, assumeTrack34, emitUncalledFunctions, monolithMode);
-
-        if (optimizationLevel > 0)
-            asmText.peepholeOptimize(optimizationLevel == 2);
-        if (wholeFunctionOptimization)
-            asmText.optimizeWholeFunctions();
-    }
-
-
-    /*  Now that yyparse() and emitAssembler() have been called, free the memory,
-        to keep valgrind from reporting a leak.
-    */
-    extern string sourceFilename;
-    sourceFilename.clear();
-
-
-    /*  Create an asm file that will receive the assembly language code:
-    */
-    if (numErrors == 0 && !params.generatePrerequisitesFileOnly)
-    {
         if (verbose)
+            cout << "Compiling..." << endl;
+        assert(yyin != NULL);
+        yyparse();  // invoke parser.yy
+
+
+        uint16_t pragmaStackSpace = 0;
+
+        tu.processPragmas(params.codeAddress, params.codeAddressSetBySwitch,
+                          limitAddress, limitAddressSetBySwitch,
+                          params.dataAddress, params.dataAddressSetBySwitch,
+                          pragmaStackSpace, monolithMode, compileOnly);
+
+        /*  Apply #pragma stack_space only if --stack-space not used.
+        */
+        if (pragmaStackSpace != 0 && !stackSpaceSpecifiedByCommandLine)
+            params.stackSpace = pragmaStackSpace;
+
+        /*  On the Vectrex, the writable globals must be mapped at $C880
+            while the code and read-only globals are mapped at the start of memory.
+        */
+        if (targetPlatform == VECTREX)
+            params.dataAddress = 0xC880;  // equivalent to --data=0xC880
+
+
+        tu.enableNullPointerChecking(nullPointerCheckingEnabled);
+
+        tu.enableStackOverflowChecking(stackOverflowCheckingEnabled);
+
+        if (verbose && targetPlatform != OS9)
         {
-            if (monolithMode)
-                cout << "Assembler: " << assemblerFilename << "\n";
-            cout << "Assembly language filename: " << asmFilename << "\n";
-            cout << flush;
+            cout << "Code address: $" << hex << params.codeAddress << dec << " (" << params.codeAddress << ")\n";
+            cout << "Data address: ";
+            if (params.dataAddress == 0xFFFF)
+                cout << "after the code";
+            else
+                cout << "$" << hex << params.dataAddress << dec << " (" << params.dataAddress << ")";
+            cout << "\n";
         }
-        ofstream asmFile(asmFilename.c_str(), ios::out);
-        if (!asmFile)
+
+        int pipeCmdStatus = preprocFileCloser.close();
+        if (!WIFEXITED(pipeCmdStatus))
         {
-            int e = errno;
-            cout << PACKAGE << fatalErrorPrefix << "failed to create assembler file:"
-                            << " " << strerror(e) << endl;
+            cout << PACKAGE << fatalErrorPrefix << "preprocessor terminated abnormally." << endl;
             return EXIT_FAILURE;
         }
-        if (!asmText.writeFile(asmFile, monolithMode))
+        if (WEXITSTATUS(pipeCmdStatus) != 0)
         {
-            cout << PACKAGE << fatalErrorPrefix << "failed to write output assembly file " << asmFilename << endl;
+            cout << PACKAGE << fatalErrorPrefix << "preprocessor failed." << endl;
             return EXIT_FAILURE;
         }
-        asmFile.close();
-        if (!asmFile)
+
+        if (numErrors == 0)
         {
-            cout << PACKAGE << fatalErrorPrefix << "failed to close output assembly file " << asmFilename << endl;
-            return EXIT_FAILURE;
+            tu.checkSemantics(params.monolithMode);  // this is when Scope objects get created in FunctionDefs
+
+            tu.allocateLocalVariables();  // in all FunctionDef objects
         }
+
+        if (targetPlatform == VECTREX)
+        {
+            // The Vectrex is limited in RAM space and shares the stack with freely available memory.
+            // $C880 - $CBEA is user RAM (874 bytes)
+            // $CBEA is Vec_Default_Stk Default top-of-stack
+            //
+            params.stackSpace = 256;
+        }
+
+        ASMText asmText;
+
+        if (numErrors == 0)
+        {
+            tu.emitAssembler(asmText, moduleName, compileOnly, params.codeAddress, params.dataAddress,
+                             params.stackSpace, assumeTrack34, emitUncalledFunctions, monolithMode);
+
+            if (optimizationLevel > 0)
+                asmText.peepholeOptimize(optimizationLevel == 2);
+            if (wholeFunctionOptimization)
+                asmText.optimizeWholeFunctions();
+        }
+
+
+        /*  Now that yyparse() and emitAssembler() have been called, free the memory,
+            to keep valgrind from reporting a leak.
+        */
+        extern string sourceFilename;
+        sourceFilename.clear();
+
+
+        /*  Create an asm file that will receive the assembly language code:
+        */
+        if (numErrors == 0)
+        {
+            if (verbose)
+            {
+                if (monolithMode)
+                    cout << "Assembler: " << assemblerFilename << "\n";
+                cout << "Assembly language filename: " << asmFilename << "\n";
+                cout << flush;
+            }
+            ofstream asmFile(asmFilename.c_str(), ios::out);
+            if (!asmFile)
+            {
+                int e = errno;
+                cout << PACKAGE << fatalErrorPrefix << "failed to create assembler file:"
+                                << " " << strerror(e) << endl;
+                return EXIT_FAILURE;
+            }
+            if (!asmText.writeFile(asmFile, monolithMode))
+            {
+                cout << PACKAGE << fatalErrorPrefix << "failed to write output assembly file " << asmFilename << endl;
+                return EXIT_FAILURE;
+            }
+            asmFile.close();
+            if (!asmFile)
+            {
+                cout << PACKAGE << fatalErrorPrefix << "failed to close output assembly file " << asmFilename << endl;
+                return EXIT_FAILURE;
+            }
+        }
+
+        if (verbose)
+            cout << numErrors << " error(s)"
+                    << ", " << numWarnings << " warning(s)." << endl;
+
+        if (numErrors > 0)
+            return EXIT_FAILURE;
+
+        if (numWarnings > 0 && treatWarningsAsErrors)
+            return EXIT_FAILURE;
     }
-
-    if (verbose)
-        cout << numErrors << " error(s)"
-                << ", " << numWarnings << " warning(s)." << endl;
-
-    if (numErrors > 0)
-        return EXIT_FAILURE;
-
-    if (numWarnings > 0 && treatWarningsAsErrors)
-        return EXIT_FAILURE;
 
     if (!monolithMode && params.generatePrerequisitesFile)
     {
         string dependenciesFilename = replaceExtension(compilationOutputFilename, ".d");
         ofstream dependenciesFile(dependenciesFilename.c_str(), ios::out);
         if (dependenciesFile.good())
-            tu.writePrerequisites(dependenciesFile, dependenciesFilename, compilationOutputFilename, params.pkgdatadir);
+            TranslationUnit::instance().writePrerequisites(dependenciesFile, dependenciesFilename, compilationOutputFilename, params.pkgdatadir);
         else
         {
             int e = errno;
